# poxi

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
benches/: encode_benchmark.rs
examples/: clean.rs  first.rs  pcap2json.rs
pcap/: dhcp.pcap  pcap1.pcap  pcap2.pcap  pcap3.pcap  pcap_3pkts.pcap  vxlan1.pcap  vxlan2.pcap
scarust/: Cargo.toml
scarust-derive/: Cargo.toml
scarust-derive/src/: from_repr.rs  lib.rs
scarust/examples/: first.rs
scarust/scarust-derive/src/: lib.rs
scarust/src/: lib.rs
src/: lib.rs  main.rs  packets-def.pest
src/encdec/: binary_big_endian.rs  binary_little_endian.rs  mod.rs
src/protocols/: arp.rs  bootp.rs  dot1q.rs  erspan.rs  ether.rs  geneve.rs  gre.rs  icmp.rs  ip.rs  mod.rs  pcap_file.rs  raw.rs  tcp.rs  udp.rs  vxlan.rs
src/typ/: string.rs
tests/: test1.rs  test_decode.rs  test_encode.rs  test_file_pcap.rs  test_gre.rs  test_pcap.rs
