[package]
name = "scarust"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scarust-derive = { path = "scarust-derive" }
mopa = "*"
mac_address = "*"
itertools = "*"
rand = "*"
linkme = "0.3"
lazy_static = "*"
generic-array = { version = "*", features = ["serde"] }
typenum = "*"
doc-comment = "*"
serde = { version = "1.0", features = ["derive"] }
typetag = "*"


[dev-dependencies]
criterion = "0.3"
pcap-parser = "*"
hex = "*"
serde_json = { version = "1.0" }


[[bench]]
name = "encode_benchmark"
harness = false

